--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,18 +17,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '8'
+        java-version: '17'
         distribution: 'adopt'
         cache: gradle
     #- name: Grant execute permission for gradlew
       #run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
-#     - name: Print Current Version
-#       run: ./gradlew currentVersion -q -Prelease.quiet
+      run: ./gradlew clean build
+    - name: SonarQube
+      run: ./gradlew sonarqube
 #     - name: Release
 #       run: ./gradlew release -Prelease.customUsername=${{ github.actor }} -Prelease.customPassword=${{ github.token }}
 #     - name: Print New Version
