--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id "pl.allegro.tech.build.axion-release" version "1.13.2"
 	id "jacoco"
 	id "org.sonarqube" version "3.3"
+	id "com.diffplug.spotless" version "5.12.5"
 }
 
 group = 'com.github.sumitsutar.exercises'
@@ -67,9 +68,26 @@ dependencies {
 
 	//to test POJO classes
 	testImplementation 'org.force66:BeanTester:1.0.1-rc1'
+
 }
 
+spotless {
+	java {
+		removeUnusedImports()
+		trimTrailingWhitespace()
+		indentWithSpaces(4)
+		endWithNewline()
 
+		replace 'Not enough space after if', 'if(', 'if ('
+		replaceRegex 'Too much space after if', 'if +\\(', 'if ('
+
+		replace 'Not enough space after for', 'for(', 'for ('
+		replaceRegex 'Too much space after for', 'for +\\(', 'for ('
+
+		replace 'Not enough space after while', 'while(', 'while ('
+		replaceRegex 'Too much space after while', 'while +\\(', 'while ('
+	}
+}
 
 test {
 	useJUnitPlatform()
